[gd_scene load_steps=12 format=3 uid="uid://cq4s2c577g325"]

[ext_resource type="Script" uid="uid://bjxslt5t6t0x6" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://bi1386lj3r1s0" path="res://assets/sprites/bg-menu.png" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://d0gg5twlcqjih" path="res://assets/sprites/botoes-menu.png" id="3_bqqt6"]
[ext_resource type="Texture2D" uid="uid://dw52xcxtfyejr" path="res://assets/sprites/logoCatolica.png" id="4_8ln24"]
[ext_resource type="Texture2D" uid="uid://b1h1pdonr4u3p" path="res://assets/sprites/title-menu.png" id="5_rtw2f"]
[ext_resource type="PackedScene" uid="uid://dqnaqj8yb6hwd" path="res://scenes/player.tscn" id="6_rtw2f"]
[ext_resource type="Texture2D" uid="uid://du5ep2dlwg7h8" path="res://assets/sprites/regras-do-jogo.png" id="6_tbmy8"]
[ext_resource type="Texture2D" uid="uid://dqwpe723n0pg2" path="res://assets/sprites/ec2019ee-7cbf-4338-b30e-9eca2841c936-removebg-preview.png" id="8_jk1qb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oa1go"]
size = Vector2(1172, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbmy8"]
size = Vector2(20, 675)

[sub_resource type="CircleShape2D" id="CircleShape2D_jk1qb"]
radius = 46.010868

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_ekxnf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button-jogar" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.82800007
anchor_top = 0.27600002
anchor_right = 0.82800007
anchor_bottom = 0.27600002
offset_left = -91.85608
offset_top = -31.848022
offset_right = 85.14392
offset_bottom = 29.151978

[node name="logoCatolica" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(76.24019, 585.7598)
scale = Vector2(0.365311, 0.3574985)
texture = ExtResource("4_8ln24")

[node name="Botoes" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(950, 278)
scale = Vector2(0.76593155, 0.76593155)
texture = ExtResource("3_bqqt6")

[node name="main title" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(317.00003, 177)
scale = Vector2(0.8538732, 0.83561236)
texture = ExtResource("5_rtw2f")

[node name="Button-sabermais" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.82500005
anchor_top = 0.42600003
anchor_right = 0.82500005
anchor_bottom = 0.42600003
offset_left = -93.400024
offset_top = -35.048004
offset_right = 92.599976
offset_bottom = 34.951996
flat = true

[node name="regras" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(956, 492)
texture = ExtResource("6_tbmy8")

[node name="button-regras" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.272
anchor_top = 0.46800002
anchor_right = 0.272
anchor_bottom = 0.46800002
offset_left = 550.656
offset_top = 174.736
offset_right = 737.656
offset_bottom = 200.736
flat = true

[node name="Button-sair" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.82500005
anchor_top = 0.57900006
anchor_right = 0.82500005
anchor_bottom = 0.57900006
offset_left = -85.400024
offset_top = -30.192047
offset_right = 85.599976
offset_bottom = 30.807953
flat = true

[node name="Limites" type="StaticBody2D" parent="."]

[node name="chao" type="CollisionShape2D" parent="Limites"]
position = Vector2(572, 654.5)
shape = SubResource("RectangleShape2D_oa1go")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Limites"]
position = Vector2(-10, 330.5)
shape = SubResource("RectangleShape2D_tbmy8")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Limites"]
position = Vector2(1162, 330)
shape = SubResource("RectangleShape2D_tbmy8")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Limites"]
position = Vector2(77, 586)
shape = SubResource("CircleShape2D_jk1qb")

[node name="Player" parent="." instance=ExtResource("6_rtw2f")]
position = Vector2(177, 572)
scale = Vector2(0.35, 0.35)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(326, 372)
scale = Vector2(0.77763325, 0.64767146)
texture = ExtResource("8_jk1qb")

[connection signal="pressed" from="CanvasLayer/Button-jogar" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/button-regras" to="." method="_on_buttonregras_pressed"]
[connection signal="pressed" from="CanvasLayer/Button-sair" to="." method="_on_buttonsair_pressed"]
